--- a/readem/templates/index.html
+++ b/readem/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ReadBert</title>
+    <title>Read'em</title>
 </head>
 <body>
-    <h1>ReadBERT</h1>
+    <h1>Read'em</h1>
 
     <form method="post" enctype="multipart/form-data">
         <input type="file" name="file" accept=".pdf" required>
